tests/neg-scalajs/type-mismatch.check
-- [E007] Type Mismatch Error: tests/neg-scalajs/type-mismatch.scala:6:17 ----------------------------------------------
6 |    val n: Int = msg // error message shouldn't mention implicits from `scalajs.js.|`
  |                 ^^^
  |                 Found:    (msg : String)
  |                 Required: Int
  |
  | longer explanation available when compiling with `-explain`
